--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -1,8 +1,9 @@
 html {scroll-behavior: smooth;
-transition: all 1s linear;
-overflow-x:hidden;}
+transition: all 1s linear;}
 
 body {color: #666;}
+
+html, body {overflow-x:hidden;}
 
 /* nav style */ 
 .navbar {position: sticky;
@@ -236,4 +237,6 @@ box-shadow: 0 0 10px #000000;}
   .nav-item:hover {background-color: #1c242f;}
   .nav-link {margin-left: 25px;
   width: 100%;}
+  
+  .li-box {width: 250px;}
 }
