--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -3,12 +3,11 @@ transition: all 1s linear;}
 
 body {color: #666;}
 
-html, body {overflow-x:hidden;}
-
 /* nav style */ 
 .navbar {position: sticky;
     top: 0;
-    z-index: 1;}
+    z-index: 1;
+	box-shadow: 0 0 5px black;}
 
 .nav-color {background-color: #283444;}
 .nav-border {/*border-bottom: solid 3px #5691e7; */}
@@ -239,4 +238,9 @@ box-shadow: 0 0 10px #000000;}
   width: 100%;}
   
   .li-box {width: 250px;}
+  .list-div {width: 250px;}
+
+  
+  .bs-p {margin: 0 auto;
+  width: 250px;}
 }
