--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -203,7 +203,7 @@ box-shadow: 0 0 10px #000000;}
   transition:visibility linear 0.5s;
 }
 
-#Btt:hover {
+#Btt:active {
   background-color: #555; /* Add a dark-grey background on hover */
 }
 
