--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -4,7 +4,8 @@ transition: all 1s linear;}
 body {color: #666;}
 
 /* nav style */ 
-.navbar {position: sticky;
+.navbar {position: fixed;
+width: 100%;
     top: 0;
     z-index: 1;
 	box-shadow: 0 0 5px black;}
