--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -58,6 +58,11 @@ padding: 20px;}
 .contact-p {padding: 20px;
 margin-top: 1rem;}
 
+.base-p {margin: 0;
+display: contents;
+font-style: italic;
+font-weight: normal;}
+
 /* align purposes */ 
 
 .card-align {display: inline-block;}
@@ -218,6 +223,99 @@ box-shadow: 0 0 10px #000000;}
 	to {opacity: 0;}
 }
 
+/* Image hover */ 
+
+.hoverdiv {display: inline-block;
+margin-top: 50px;}
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+  transition: all 0.6s ease-in-out;
+}
+
+.hovereffect:hover {box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.6s ease-in-out;
+  transition: all 0.6s  ease-in-out;
+}
+
+.hovereffect:hover .overlay {
+  background-color: rgba(86,145,231, 1);
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  width: 100%;
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  -webkit-transform: translateY(45px);
+  -ms-transform: translateY(45px);
+  transform: translateY(45px);
+  -webkit-transition: all 0.6s  ease-in-out;
+  transition: all 0.6s  ease-in-out;
+}
+
+.hovereffect:hover h2 {
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px);
+}
+
+.hovereffect a.info {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-decoration: none;
+  padding: 7px 14px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: transparent;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.6s  ease-in-out;
+  transition: all 0.6s  ease-in-out;
+  font-weight: bold;
+}
+
+.hovereffect:hover a.info {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.hovereffect a.info:hover {
+}
+
 /* media queries */ 
 
 @media screen and (max-width: 1100px) {
@@ -244,4 +342,6 @@ box-shadow: 0 0 10px #000000;}
   
   .bs-p {margin: 0 auto;
   width: 250px;}
+  
+  a.info {font-size: 14px;}
 }
