--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -1,424 +1,495 @@
-
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700|Saira+Semi+Condensed:400,700&display=swap');
-
-
-
-html {scroll-behavior: smooth;
-transition: all 1s linear;}
-
-body {color: #666;
-overflow-x: hidden;
-font-family: 'Raleway', sans-serif;}
-
-/* nav style */ 
-.navbar-toggler {border: none;
-padding: 10px;
-border-radius: 0px;}
-.navbar-toggler:active {background-color: #1c242f;}
-.navbar {position: fixed;
-width: 100%;
-    top: 0;
-    z-index: 11;
-	box-shadow: 0 0 5px black;
-	font-family: 'Saira Semi Condensed', sans-serif;
+ @import url('https://fonts.googleapis.com/css?family=Raleway:400,700|Saira+Semi+Condensed:400,700&display=swap');
+ html {
+    scroll-behavior: smooth;
+     transition: all 1s linear;
 }
-
-.navbar-nav {margin-left: -20px;}
-
-.nav-color {background-color: #283444;
-background-image: linear-gradient(to right bottom, #283444, #283649, #28384f, #283a54, #283c5a);}
-.nav-border {/*border-bottom: solid 3px #5691e7; */}
-.nav-link {padding: 20px;
-width: 125px;}
-.nav-item {text-align: center;}
-
+ body {
+    color: #666;
+     overflow-x: hidden;
+     font-family: 'Raleway', sans-serif;
+}
+/* nav style */
+ .navbar-toggler {
+    border: none;
+     padding: 10px;
+     border-radius: 0px;
+}
+ .navbar-toggler:active {
+    background-color: #1c242f;
+}
+ .navbar {
+    position: fixed;
+     width: 100%;
+     top: 0;
+     z-index: 11;
+     box-shadow: 0 0 5px black;
+     font-family: 'Saira Semi Condensed', sans-serif;
+}
+ .navbar-nav {
+    margin-left: -20px;
+}
+ .nav-color {
+    background-color: #283444;
+     background-image: linear-gradient(to right bottom, #283444, #283649, #28384f, #283a54, #283c5a);
+}
+ .nav-border {
+    /*border-bottom: solid 3px #5691e7;
+     */
+}
+ .nav-link {
+    padding: 20px;
+     width: 125px;
+}
+ .nav-item {
+    text-align: center;
+}
 /* Link style */
-
-#bootstrap-override .nav-link-color {color: #ffffff;
-transition: all 200ms linear;}
-#bootstrap-override .nav-link-color:hover {color: #5691e7;}
-
-.darkblue-c {color: #5691e7;}
-.darkblue-c:hover {color: #ffffff;}
-
+ #bootstrap-override .nav-link-color {
+    color: #ffffff;
+     transition: all 200ms linear;
+}
+ #bootstrap-override .nav-link-color:hover {
+    color: #5691e7;
+}
+ .darkblue-c {
+    color: #5691e7;
+}
+ .darkblue-c:hover {
+    color: #ffffff;
+}
 /* DIV Columns */
-
-.col {text-align: center;}
-
-.container {max-width: 100%;}
-
-.col-start {padding: 200px 0 200px 0;
-background-image: url(../../img/bubblesmall.jpg), linear-gradient(10deg, rgba(0,0,56,1) 0%, rgba(86,145,231,1) 100%);
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
-color: #ffffff;}
-
-.col-fh {height: 100vh;
-display: grid;
-align-content: center;}
-
-.col-gen {padding: 100px 0 100px 0;}
-
-.col-bot {padding: 100px 0 175px 0;}
-
-.col-color-dark {background-color: #283444;
-color: #ffffff;}
-
-.div-p-b {padding-bottom: 50px;}
-
-#portfoliosec, #aboutsec, #skillssec, #contactsec {margin-top: -64px;}
-
+ .col {
+    text-align: center;
+}
+ .container {
+    max-width: 100%;
+}
+ .col-start {
+    padding: 200px 0 200px 0;
+     background-image: url(../../img/bubblesmall.jpg), linear-gradient(10deg, rgba(0,0,56,1) 0%, rgba(86,145,231,1) 100%);
+     background-position: center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     color: #ffffff;
+}
+ .col-fh {
+    height: 100vh;
+     display: grid;
+     align-content: center;
+}
+ .col-gen {
+    padding: 100px 0 100px 0;
+}
+ .col-bot {
+    padding: 100px 0 175px 0;
+}
+ .col-color-dark {
+    background-color: #283444;
+     color: #ffffff;
+}
+ .div-p-b {
+    padding-bottom: 50px;
+}
+ #portfoliosec, #aboutsec, #skillssec, #contactsec {
+    margin-top: -64px;
+}
 /* Paragraph editing */
-
-.bs-p {margin: 0;}
-
-.bs-p-concise {width: 500px;
-text-align: left;
-margin: 0;
-padding: 20px;}
-
-.bs-p-lg {width: 750px;}
-
-.contact-p {padding: 20px;
-margin-top: 1rem;}
-
-.base-p {margin: 0;
-display: contents;
-font-style: italic;
-font-weight: normal;}
-
-/* align purposes */ 
-
-.card-align {display: inline-block;}
-
-/* HEADING editing */
-
-.div-center {display: flex;
-justify-content: center;}
-
-/* List styling */
-
-.custom-ls {
-padding: 0;
-text-align: center;
-display: inline-block;
-list-style-type: none;
-font-weight: bold;
-
+ .bs-p {
+    margin: 0;
 }
-
-.custom-ls-li {
-transition: all 200ms linear;}
-.custom-ls-li:hover {
-cursor: default;}
-
-.li-box {padding: 20px;
-border: solid 3px #283444;
-background-color: #283444;
-margin: 50px 0px 0px 0px;
-border-radius: 50px;
-width: 500px;
-color: #ffffff;
-transition: all 200ms ease-in-out;
-z-index: 10;
-}
-
-.custom-marl {margin-right: 20px;}
-.custom-marr {margin-left: 20px;}
-
-.list-div {background-color: #0088cb;
-    border: solid 3px #0088cb;
-    display: flex;
-	color: #ffffff;
-	opacity: 0;
-    position: absolute;
+ .bs-p-concise {
     width: 500px;
-    margin-left: -23px;
-    margin-top: 40px;
-    height: 0px;
-    border-radius: 50px;
-	align-items: center;
-	justify-content: center;
-	transition: all 200ms ease-in-out;}
-	
-.list-div > p {margin: 0;}
-
-.box-p-toggle {margin-bottom: 105px;}
-.box-p-toggle > .list-div {opacity: 1;
-height: 70px;}
-	
-.ldiv-p1 {
-text-align: center;
-width: 450px;}
-
-.ldiv-p2 {
-text-align: center;
-width: 450px;}
-
-.ldiv-p3 {
-text-align: center;
-width: 450px;}
-
-.ldiv-p4 {
-text-align: center;
-width: 450px;}
-
-.ldiv-p5 {
-text-align: center;
-width: 450px;}
-
-.ldiv-p6 {
-text-align: center;
-width: 450px;}
-
-
+     text-align: left;
+     margin: 0;
+     padding: 20px;
+}
+ .bs-p-lg {
+    width: 750px;
+}
+ .contact-p {
+    padding: 20px;
+     margin-top: 1rem;
+}
+ .base-p {
+    margin: 0;
+     display: contents;
+     font-style: italic;
+     font-weight: normal;
+}
+/* align purposes */
+ .card-align {
+    display: inline-block;
+}
+/* HEADING editing */
+ .div-center {
+    display: flex;
+     justify-content: center;
+}
+/* List styling */
+ .custom-ls {
+     padding: 0;
+     text-align: center;
+     display: inline-block;
+     list-style-type: none;
+     font-weight: bold;
+}
+ .custom-ls-li {
+     transition: all 200ms linear;
+}
+ .custom-ls-li:hover {
+     cursor: default;
+}
+ .li-box {
+    padding: 20px;
+     border: solid 3px #283444;
+     background-color: #283444;
+     margin: 50px 0px 0px 0px;
+     border-radius: 50px;
+     width: 500px;
+     color: #ffffff;
+     transition: all 200ms ease-in-out;
+     z-index: 10;
+}
+ .custom-marl {
+    margin-right: 20px;
+}
+ .custom-marr {
+    margin-left: 20px;
+}
+ .list-div {
+    background-color: #0088cb;
+     border: solid 3px #0088cb;
+     display: flex;
+     color: #ffffff;
+     opacity: 0;
+     position: absolute;
+     width: 500px;
+     margin-left: -23px;
+     margin-top: 40px;
+     height: 0px;
+     border-radius: 50px;
+     align-items: center;
+     justify-content: center;
+     transition: all 200ms ease-in-out;
+}
+ .list-div > p {
+    margin: 0;
+}
+ .box-p-toggle {
+    margin-bottom: 105px;
+}
+ .box-p-toggle > .list-div {
+    opacity: 1;
+     height: 70px;
+}
+ .ldiv-p1 {
+     text-align: center;
+     width: 450px;
+}
+ .ldiv-p2 {
+     text-align: center;
+     width: 450px;
+}
+ .ldiv-p3 {
+     text-align: center;
+     width: 450px;
+}
+ .ldiv-p4 {
+     text-align: center;
+     width: 450px;
+}
+ .ldiv-p5 {
+     text-align: center;
+     width: 450px;
+}
+ .ldiv-p6 {
+     text-align: center;
+     width: 450px;
+}
 /* header styling */
-.h-margin {margin: 0px 0px 25px 0px;}
-
-.h-padding-b {padding-bottom: 20px;
-padding-top: 20px;}
-
-.h-padding-lg {padding-bottom: 100px;}
-
-/* img styling */ 
-
-.navbar-brand {padding: 0px;
-margin: 0px 10px 0px 0px;}
-
-.img-logo {width: 200px;
-position: absolute;
-right: 20px;
-top: 6px;}
-
-.img-padding-fpc {background-color: #9c9c9c;
-    padding: 85px 25px 85px 25px;
-	border-radius: 0;
-	transition: all 500ms ease-in-out;
-	background-image: url(../../img/1930class.jpg);
-	background-position: center;
-	background-blend-mode: screen;
+ .h-margin {
+    margin: 0px 0px 25px 0px;
 }
-	
+ .h-padding-b {
+    padding-bottom: 20px;
+     padding-top: 20px;
+}
+ .h-padding-lg {
+    padding-bottom: 100px;
+}
+/* img styling */
+ .navbar-brand {
+    padding: 0px;
+     margin: 0px 10px 0px 0px;
+}
+ .img-logo {
+    width: 200px;
+     position: absolute;
+     right: 20px;
+     top: 6px;
+}
+ .img-padding-fpc {
+    background-color: #9c9c9c;
+     padding: 85px 25px 85px 25px;
+     border-radius: 0;
+     transition: all 500ms ease-in-out;
+     background-image: url(../../img/1930class.jpg);
+     background-position: center;
+     background-blend-mode: screen;
+}
 /* button coloring */
-
-.btn-color-p {background-color: #a27fde;
-border-color: #a27fde;
-border-radius: 0;}
-.btn-color-p:hover {background-color: #71589b;
-border-color: #71589b;}
-
+ .btn-color-p {
+    background-color: #a27fde;
+     border-color: #a27fde;
+     border-radius: 0;
+}
+ .btn-color-p:hover {
+    background-color: #71589b;
+     border-color: #71589b;
+}
 /* card styling */
-
-.fpc-card {border: solid 5px #283444;
-border-radius: 0px;
-color: #ffffff;
-background-color: #283444;}
-
-
+ .fpc-card {
+    border: solid 5px #283444;
+     border-radius: 0px;
+     color: #ffffff;
+     background-color: #283444;
+}
 /* Image styling */
-
-.img-round {border-radius: 100%;}
-
-.img-border1 {border: solid 5px #ffffff;
-box-shadow: 0 0 10px #000000;}
-
+ .img-round {
+    border-radius: 100%;
+}
+ .img-border1 {
+    border: solid 5px #ffffff;
+     box-shadow: 0 0 10px #000000;
+}
 /* Back to top button */
-
-.btt {
-  visibility: hidden; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: #5691e7; /* Set a background color */
-  box-shadow: 0 3px 3px rgba(0,0,0, 0.4);
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 10px; /* Some padding */
-  border-radius: 50px; /* Rounded corners */
-  width: 50px;
-  height: 50px;
-  line-height: 10px;
-  opacity: 0;
-  transition: all linear 0.5s;
-  animation-name: backwardsAnim;
-  animation-duration: 500ms;
-  animation-fill-mode: forwards;
-  font-size: 30px;
+ .btt {
+     visibility: hidden;
+    /* Hidden by default */
+     position: fixed;
+    /* Fixed/sticky position */
+     bottom: 20px;
+    /* Place the button at the bottom of the page */
+     right: 30px;
+    /* Place the button 30px from the right */
+     z-index: 99;
+    /* Make sure it does not overlap */
+     border: none;
+    /* Remove borders */
+     outline: none;
+    /* Remove outline */
+     background-color: #5691e7;
+    /* Set a background color */
+     box-shadow: 0 3px 3px rgba(0,0,0, 0.4);
+     color: white;
+    /* Text color */
+     cursor: pointer;
+    /* Add a mouse pointer on hover */
+     padding: 10px;
+    /* Some padding */
+     border-radius: 50px;
+    /* Rounded corners */
+     width: 50px;
+     height: 50px;
+     line-height: 10px;
+     opacity: 0;
+     transition: all linear 0.5s;
+     animation-name: backwardsAnim;
+     animation-duration: 500ms;
+     animation-fill-mode: forwards;
+     font-size: 30px;
 }
-
-.btt-show {visibility: visible;
-animation-name: forwardsAnim;
-animation-duration: 500ms;
-animation-fill-mode: forwards;
-transition: all linear 0.5s;}
-
-.btt-arrow {  border: solid #fff;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 4px;
-    transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);}
-  
-button:focus {outline: 0;
-transition: all 100ms linear;}
-button:active {background-color: #666;
-transition: all 100ms linear;}
-
-#Btt:active {
-  background-color: #555; /* Add a dark-grey background on hover */
+ .btt-show {
+    visibility: visible;
+     animation-name: forwardsAnim;
+     animation-duration: 500ms;
+     animation-fill-mode: forwards;
+     transition: all linear 0.5s;
 }
-
-@keyframes forwardsAnim {
-	from {opacity: 0;}
-	to {opacity: 1;}
+ .btt-arrow {
+     border: solid #fff;
+     border-width: 0 3px 3px 0;
+     display: inline-block;
+     padding: 4px;
+     transform: rotate(-135deg);
+     -webkit-transform: rotate(-135deg);
 }
-
-@keyframes backwardsAnim {
-	from {opacity: 1;}
-	to {opacity: 0;}
+ button:focus {
+    outline: 0;
+     transition: all 100ms linear;
 }
-
-/* Image hover */ 
-
-.hoverdiv {display: inline-block;
-margin-top: 25px;}
-
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-  transition: all 0.6s ease-in-out;
+ button:active {
+    background-color: #666;
+     transition: all 100ms linear;
 }
-
-.hovereffect:hover {box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
+ #Btt:active {
+     background-color: #555;
+    /* Add a dark-grey background on hover */
 }
-
-.hovereffect .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  -webkit-transition: all 0.6s ease-in-out;
-  transition: all 0.6s  ease-in-out;
+ @keyframes forwardsAnim {
+     from {
+        opacity: 0;
+    }
+     to {
+        opacity: 1;
+    }
 }
-
-.hovereffect:hover .overlay {
-  background-color: rgba(86,145,231, 1);
+ @keyframes backwardsAnim {
+     from {
+        opacity: 1;
+    }
+     to {
+        opacity: 0;
+    }
 }
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  width: 100%;
+/* Image hover */
+ .hoverdiv {
+    display: inline-block;
+     margin-top: 25px;
 }
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  color: #fff;
-  text-align: center;
-  position: relative;
-  font-size: 17px;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.6);
-  -webkit-transform: translateY(45px);
-  -ms-transform: translateY(45px);
-  transform: translateY(45px);
-  -webkit-transition: all 0.6s  ease-in-out;
-  transition: all 0.6s  ease-in-out;
+ .hovereffect {
+     width: 100%;
+     height: 100%;
+     float: left;
+     overflow: hidden;
+     position: relative;
+     text-align: center;
+     cursor: default;
+     transition: all 0.6s ease-in-out;
 }
-
-.hovereffect:hover h2 {
-  -webkit-transform: translateY(5px);
-  -ms-transform: translateY(5px);
-  transform: translateY(5px);
+ .hovereffect:hover {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
 }
-
-.hovereffect a.info {
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  text-decoration: none;
-  padding: 7px 14px;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: transparent;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
-  -webkit-transition: all 0.6s  ease-in-out;
-  transition: all 0.6s  ease-in-out;
-  font-weight: bold;
+ .hovereffect .overlay {
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     overflow: hidden;
+     top: 0;
+     left: 0;
+     -webkit-transition: all 0.6s ease-in-out;
+     transition: all 0.6s ease-in-out;
 }
-
-.hovereffect:hover a.info {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
+ .hovereffect:hover .overlay {
+     background-color: rgba(86,145,231, 1);
 }
-
-.hovereffect a.info:hover {
+ .hovereffect img {
+     display: block;
+     position: relative;
+     width: 100%;
 }
-
-/* media queries */ 
-
-@media screen and (max-width: 767px) {
-	
-  .custom-marl {
-	  margin: 0px;
-  }
-  
-  .custom-marr {
-	  margin: 0px;
-  }
-  
-  .ldiv-p3 > .custom-marr {margin-top: -50px;}
-  
-  .img-logo {top: 0px;
-  left: 20px;}
-  
-  .navbar-nav {margin-left: 0px;}
-  
-  .navbar {padding: 0;}
-  .navbar-toggler {margin: 8px;}
-  .nav-item {width: 100%;
-  transition: all 100ms linear;
-  text-align: left;}
-  .nav-item:hover {background-color: #1c242f;}
-  .nav-link {margin-left: 25px;
-  width: 100%;}
-  
-  .li-box {width: 250px;
-  border-radius: 0px;}
-  .list-div {width: 250px;
-  border-radius: 0px;}
-  
-  #portfoliosec, #aboutsec, #skillssec, #contactsec {margin-top: -54px;}
-
-  
-  .bs-p {margin: 0 auto;
-  width: 250px;}
-  
-  a.info {font-size: 14px;}
-  
-  .hoverdiv {width: 300px;}
-  
-  #jq[data-aos-delay='200'] {transition-delay: 0s;}
-  #bs[data-aos-delay='200'] {transition-delay: 0s;}
-  #ps[data-aos-delay='200'] {transition-delay: 0s;}
+ .hovereffect h2 {
+     text-transform: uppercase;
+     color: #fff;
+     text-align: center;
+     position: relative;
+     font-size: 17px;
+     padding: 10px;
+     background: rgba(0, 0, 0, 0.6);
+     -webkit-transform: translateY(45px);
+     -ms-transform: translateY(45px);
+     transform: translateY(45px);
+     -webkit-transition: all 0.6s ease-in-out;
+     transition: all 0.6s ease-in-out;
+}
+ .hovereffect:hover h2 {
+     -webkit-transform: translateY(5px);
+     -ms-transform: translateY(5px);
+     transform: translateY(5px);
+}
+ .hovereffect a.info {
+     width: 100%;
+     height: 100%;
+     justify-content: center;
+     align-items: center;
+     display: flex;
+     text-decoration: none;
+     padding: 7px 14px;
+     text-transform: uppercase;
+     color: #fff;
+     background-color: transparent;
+     opacity: 0;
+     filter: alpha(opacity=0);
+     -webkit-transform: scale(0);
+     -ms-transform: scale(0);
+     transform: scale(0);
+     -webkit-transition: all 0.6s ease-in-out;
+     transition: all 0.6s ease-in-out;
+     font-weight: bold;
+}
+ .hovereffect:hover a.info {
+     opacity: 1;
+     filter: alpha(opacity=100);
+     -webkit-transform: scale(1);
+     -ms-transform: scale(1);
+     transform: scale(1);
+}
+ .hovereffect a.info:hover {
+}
+/* media queries */
+ @media screen and (max-width: 767px) {
+     .custom-marl {
+         margin: 0px;
+    }
+     .custom-marr {
+         margin: 0px;
+    }
+     .ldiv-p3 > .custom-marr {
+        margin-top: -50px;
+    }
+     .img-logo {
+        top: 0px;
+         left: 20px;
+    }
+     .navbar-nav {
+        margin-left: 0px;
+    }
+     .navbar {
+        padding: 0;
+    }
+     .navbar-toggler {
+        margin: 8px;
+    }
+     .nav-item {
+        width: 100%;
+         transition: all 100ms linear;
+         text-align: left;
+    }
+     .nav-item:hover {
+        background-color: #1c242f;
+    }
+     .nav-link {
+        margin-left: 25px;
+         width: 100%;
+    }
+     .li-box {
+        width: 250px;
+         border-radius: 0px;
+    }
+     .list-div {
+        width: 250px;
+         border-radius: 0px;
+    }
+     #portfoliosec, #aboutsec, #skillssec, #contactsec {
+        margin-top: -54px;
+    }
+     .bs-p {
+        margin: 0 auto;
+         width: 250px;
+    }
+     a.info {
+        font-size: 14px;
+    }
+     .hoverdiv {
+        width: 300px;
+    }
+     #jq[data-aos-delay='200'] {
+        transition-delay: 0s;
+    }
+     #bs[data-aos-delay='200'] {
+        transition-delay: 0s;
+    }
+     #ps[data-aos-delay='200'] {
+        transition-delay: 0s;
+    }
 }
